fix: LADI-5176 Explicitly assign item alignment for each theme for BlockStaffArticleItem (#939)
* fix: experiemnting with truncation

* fix: experimenting with truncation

* fix: experimenting with truncation

* fix: reinstate removeHtmlTruncate but remove the truncation

* fix: update story to only 200 characters

* fix: update SectionStaffArticleLis and its stories

* fix: linting

* fix: delete truncation

* fix: change truncate length

* fix: remove comments

* fix: linting

* fix: changed truncation length

* fix: linting

* fix: return stories to OG

* fix: return stories to OG

* fix: remove commented out code

* fix: delete styles

* fix: restore the previous truncation in the component files

* fix: remove ftva-description

* fix: uncomment height lone 36

* fix: add min-height

* fix: first-child padding bottom

* fix: first-child padding-top

* fix: unset the height

* fix: explicitly assign  item alignment for block-staff-article-item component for each theme

* fix: return mock data to original

---------

--- a/packages/vue-component-library/src/styles/default/_block-staff-article-item.scss
+++ b/packages/vue-component-library/src/styles/default/_block-staff-article-item.scss
@@ -4,7 +4,7 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   position: relative;
 
